--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ nav ul li a:hover { color: gray; }
 <h1>Sitio web de la empresa</h1>
 <nav>
 <ul>
-<li><a href="#">EMPRESA</a></li>
+<li><a href="empresa.html">EMPRESA</a></li>
 <li><a href="productos.html">PRODUCTOS</a></li>
 <li><a href="#">SERVICIOS</a></li>
 <li><a href="#">CONTACTO</a></li>
