--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ nav ul li a:hover { color: gray; }
 <ul>
 <li><a href="empresa.html">EMPRESA</a></li>
 <li><a href="productos.html">PRODUCTOS</a></li>
-<li><a href="#">SERVICIOS</a></li>
-<li><a href="#">CONTACTO</a></li>
+<li><a href="contacto.html">SERVICIOS</a></li>
+<li><a href="servicios.html">CONTACTO</a></li>
 </ul>
 </nav>
 </div>
